<!--<resources>--><!--<string name="app_name">Journey</string>--><!--<string name="articles">Articles</string>--><!--<string name="about_us">About Us</string>--><!--<string name="johney_history"><![CDATA[Johnny & History]]></string>--><!--<string name="contact_us">Contact Us</string>--><!--<string name="events">Events</string>--><!--<string name="my_articles">My Articles</string>--><!--<string name="specialist">Specialit</string>--><!--<string name="research_articles">Research Articles</string>--><!--<string name="travel_articles">Travel Articles</string>--><!--<string name="article_name">Article Name</string>--><!--<string name="post_date_time">Post Date/Time</string>--><!--<string name="description">Description</string>--><!--<string name="upload_image_or_video">Picture Or Video</string>--><!--<string name="upload_article">Upload Article</string>--><!--<string name="network_error">No Internet connection found, Please Try Again</string>--><!--<string name="name">Name</string>--><!--<string name="address">Address</string>--><!--<string name="email">Email</string>--><!--<string name="phone">Phone</string>--><!--<string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>--><!--<string name="action_arabic">Arabic</string>--><!--<string name="action_english">English</string>--><!--<string name="message_success">Details got successfully</string>--><!--<string name="message_error">No Details Found, Please Try Again.</string>--><!--<string name="sun">SUN</string>--><!--<string name="mon">MON</string>--><!--<string name="tue">TUE</string>--><!--<string name="wed">WED</string>--><!--<string name="THU">THU</string>--><!--<string name="FRI">FRI</string>--><!--<string name="sat">SAT</string>--><!--</resources>-->
<resources>
    <string name="app_name">رحلة و تاريخ</string>
    <string name="articles">مقالات</string>
    <string name="article">المقالة</string>
    <string name="about_us">نبذة عنّا</string>
    <string name="johney_history">رحلة و تاريخ</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="events">لمناسبات و الندوات</string>
    <string name="my_articles">مقالاتي</string>
    <string name="specialist">مقالات المختصين</string>
    <string name="research_articles">مقالات الباحثين و المهتمين</string>
    <string name="travel_articles">مقالات الرحالة</string>
    <string name="article_name">اسم المادة</string>
    <string name="post_date_time">آخر تاريخ / وقت</string>
    <string name="description">وصف</string>
    <string name="upload_image_or_video">الصورة أو الفيديو</string>
    <string name="upload_article">تحميل المادة</string>
    <string name="network_error">أي اتصال إنترنت وجدت، يرجى المحاولة مرة أخرى</string>
    <string name="name">اسم</string>
    <string name="address">عنوان</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="hereissocialmedia">حساباتنا في مواقع التواصل الإجتماعي :</string>
    <string name="hereisemail">نستقبل مشاركاتكم على البريد الإكتروني التالي :</string>
    <string name="phone">هاتف</string>
    <string name="runtime_permissions_txt">يرجى تمكين كافة الأذونات من إعدادات التطبيق.</string>
    <string name="action_arabic">العربية</string>
    <string name="action_english">الإنجليزية</string>
    <string name="message_success">تفاصيل حصلت بنجاح</string>
    <string name="message_error">لا تفاصيل العثور، يرجى المحاولة مرة أخرى.</string>
    <string name="sun">الأحد</string>
    <string name="mon">الإثنين</string>
    <string name="tue">الثلاثاء</string>
    <string name="wed">الأربعاء</string>
    <string name="THU">الخميس</string>
    <string name="FRI">الجمعة</string>
    <string name="sat">يوم السبت</string>
    <string name="JAN">كانون الثاني</string>
    <string name="FAB">فبراير</string>
    <string name="MAR">مارس</string>
    <string name="APR">أبريل</string>
    <string name="MAY">قد</string>
    <string name="JUN">يونيو</string>
    <string name="JUL">يوليو</string>
    <string name="AUG">أغسطس</string>
    <string name="SEP">سبتمبر</string>
    <string name="OCT">شهر اكتوبر</string>
    <string name="NOV">تشرين الثاني</string>
    <string name="DEC">ديسمبر</string>
    <string name="facebook">فيس بوك</string>
    <string name="twitter">تغريد</string>
    <string name="instagram">إنستاجرام</string>
    <string name="watch_video">شاهد الفيديو</string>
    <string name="emailid">Sultana_awatif@hotmail.com</string>
    <string name="website">موقع الكتروني</string>
    <string name="snapchat">سناب شات</string>
    <string name="sultana">Sultana_awatif</string>
</resources>
