<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout_ContactUsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/hereisemail"
            android:textColor="@color/text_brown"
            android:textSize="@dimen/_14sdp" />


        <TextView
            android:id="@+id/activity_contact_us_email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/emailid"
            android:textColor="@color/text_brown"
            android:textSize="@dimen/_16sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@color/text_brown"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/hereissocialmedia"
            android:textColor="@color/text_brown"
            android:textSize="@dimen/_14sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@color/light_brown"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/activity_contactus_insta"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/insta_64" />

                <ImageView
                    android:id="@+id/activity_contactus_twitter"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/tweet_64" />

                <ImageView
                    android:id="@+id/activity_contactus_youtube"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/you_tube_64" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>